fix: java 관련 이론 수정